# bench-pilot

./: .gitignore  README.md  pyproject.toml
benchpilot/: cli.py  config.py  runner.py  storage.py
benchpilot/benchmarks/: registry.py  ssd.py  stress.py
benchpilot/benchmarks/gpu/: __init__.py  cnn.py  hf_inference.py  image_gen.py  ollama_bench.py  transformer.py  vram_stress.py
benchpilot/monitor/: cpu.py  sampler.py
benchpilot/report/: __init__.py
benchpilot/report/templates/: dashboard.html.j2
benchpress/: __main__.py  cli.py  config.py  runner.py  storage.py
benchpress/benchmarks/: __init__.py  _shell.py  base.py  cpu.py  ram.py  registry.py  ssd.py  stress.py
benchpress/benchmarks/gpu/: _torch.py  cnn.py  hf_inference.py  image_gen.py  ollama_bench.py  tensor.py  transformer.py  vram_stress.py
benchpress/monitor/: __init__.py  disk.py  hwmon.py  nvidia.py  sampler.py
benchpress/report/: __init__.py  generator.py
benchpress/report/templates/: dashboard.html.j2
scripts/: install-system-deps.sh
tests/: conftest.py  test_cli.py  test_config.py  test_report.py  test_runner.py  test_storage.py
tests/benchmarks/: test_cpu.py  test_ram.py  test_registry.py  test_shell.py  test_ssd.py  test_stress.py
tests/benchmarks/gpu/: test_cnn.py  test_hf_inference.py  test_image_gen.py  test_ollama_bench.py  test_skip_paths.py  test_tensor.py  test_transformer.py  test_vram_stress.py
tests/monitor/: test_cpu.py  test_disk.py  test_hwmon.py  test_nvidia.py  test_sampler.py
