[project]
name = "benchpilot"
version = "0.1.0"
description = "Linux end-to-end benchmarking suite (CPU / RAM / SSD / NVIDIA GPU) with sensor telemetry and dashboard report."
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "psutil>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
# GPU/ML stack — installed via the cu126 index (see [tool.uv]).
gpu = [
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.44",
    "accelerate>=0.34",
    "diffusers>=0.30",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
]

[project.scripts]
benchpilot = "benchpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchpilot"]

# uv: keep all package downloads + wheel cache inside the project tree.
[tool.uv]
cache-dir = "./uv_cache"

# uv: pull CUDA-enabled torch wheels for Blackwell (RTX 50-series) from the cu126 index.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
